add elixir history and functional programming

--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
 				</code></pre>
         </section>
         <section>
-          <h2>Elixir</h2>
+          <h1>Elixir</h1>
+        </section>
+        <section>
+          <p>
+            Created by <b>José Valim</b> circa 2012, Former Rails Core Team
+            Member
+          </p>
+          <blockquote>
+            He was trying to make Rails really thread safe, found Erlang and
+            created a new programming language by mistake.
+          </blockquote>
+        </section>
+        <section>
           <p>
             Elixir is a <b>dynamic</b>, <b>functional</b> language designed for
             building <b>scalable</b> and
@@ -57,7 +69,18 @@
           </p>
         </section>
         <section>
-          <h2>Erlang/OTP</h2>
+          <h2>Functional programming</h2>
+          <ul>
+            <li>...</li>
+            <li>Pattern matching</li>
+            <li>Immutability</li>
+            <li>...</li>
+          </ul>
+        </section>
+        <section>
+          <h1>Erlang/OTP</h1>
+        </section>
+        <section>
           <p>
             Erlang is a programming language used to build
             <b>massively scalable</b> soft real-time systems with requirements
