--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
           </p>
           <img src="assets/damn.webp" height="35%" width="35%" />
         </section>
+        <section>
+          <ul>
+            <li>Amazon SimpleDB</li>
+            <li>
+              WhatsApp messaging servers (2 million connected users per server)
+            </li>
+            <li>Motorola (call processing)</li>
+            <li>AdRole (ad bidding system)</li>
+            <li>a lot mobile game backends</li>
+          </ul>
+        </section>
       </div>
     </div>
     <script src="lib/js/head.min.js"></script>
