fix minor mistakes

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -100,11 +100,11 @@
       </section>
       <section>
         <ul>
-          <li>Everything is a proces</li>
+          <li>Everything is a process</li>
           <li>Process creation is a lightweight operation</li>
           <li>Message passing is the only way to interact</li>
           <li>Processes share no resources</li>
-          <li>Processes do what they are supposed to do or fail</li>
+          <li>Processes do what they are supposed to do or fail (fail  fast)</li>
         </ul>
       </section>
       <section>
@@ -121,7 +121,7 @@
         <ul>
           <li>Amazon SimpleDB</li>
           <li>
-            WhatsApp messaging servers (2 million connected users per server)
+            WhatsApp messaging servers<br />(2 million connected users per server)
           </li>
           <li>Motorola (call processing)</li>
           <li>AdRole (ad bidding system)</li>
