add links to demo_code

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -134,7 +134,7 @@
       </section>
       <section>
         <h2>Demo</h2>
-        <a href="https://learnxinyminutes.com/docs/elixir/" target="_blank">Elixir in Y Minutes</a>
+        <p><a href="https://github.com/hlhr/talk_socraos_elixir/tree/master/demo_syntax" target="_blank">demo_syntax</a></p>
       </section>
       <section>
         <p>Elixir is a <b>dynamically typed</b> language, but...</p>
@@ -164,6 +164,7 @@
       <section>
         <h2>Demo</h2>
         <p>GenServer - Supervisor - Observer</p>
+        <p><a href="https://github.com/hlhr/talk_socraos_elixir/tree/master/demo_otp" target="_blank">demo_otp</a></p>
       </section>
       <section>
         <h3>hot code reloading</h3>
