--- a/presentation/index.html
+++ b/presentation/index.html
@@ -25,7 +25,7 @@
       <section>
         <h1>Elixir</h1>
         <h2>Auf den Schultern eines Giganten</h2>
-        <p>Meetup SoCraOs 06.03.2018</p>
+        <p><a href="https://www.meetup.com/de-DE/SoCraOs/events/258958098/" target="_blank">Meetup SoCraOs 06.03.2018</a></p>
       </section>
       <section>
         <h2>whoami</h2>
@@ -45,13 +45,16 @@
       </section>
       <section>
         <p>
-          Created by <b>José Valim</b> circa 2012, Former Rails Core Team
-          Member
+          Created by <b>José Valim</b> circa 2012,<br />
+          Former Rails Core Team Member
         </p>
         <blockquote>
           He was trying to make Rails really thread safe, found Erlang and
           created a new programming language by mistake.
         </blockquote>
+        <p>
+          <a href="https://github.com/elixir-lang/elixir" target="_blank">github.com/elixir-lang/elixir</a>
+        </p>
       </section>
       <section>
         <p>
@@ -196,7 +199,6 @@
       <section>
         <h3>...and there is more</h3>
         <ul>
-          <li>Dynamic supervisors</li>
           <li>Agent</li>
           <li>Task</li>
           <li>ETS</li>
@@ -215,9 +217,11 @@
           mix test
           mix help
         </code></pre><br />
+      </section>
+      <section>
         <h3>hex</h3>
         <p>
-          package manager for erlang / elixir<br />
+          package manager for erlang<br />
           (currently ~8200 packages) <br />
           <a href="https://hex.pm/" target="_blank">hex.pm</a> - <a href="https://hexdocs.pm/"
             target="_blank">hexdocs.pm</a>
@@ -273,12 +277,21 @@
       </section>
       <section>
         <h3>Distillery</h3>
-        <p>dependency-free implementation of<br />release generation</p><br />
+        <p>creates an Erlang OTP release from an Elixir project</p>
+        <p>self contained release<br />(Erlang Runtime System (ERTS) included)</p>
+        <p>will be part of elixir in the future</p>
+      </section>
+      <section>
         <h3>Nerves</h3>
         <p>bulletproof embedded software</p>
         <blockquote>
           If a board can run embedded Linux,<br />it likely can run Nerves.
-        </blockquote>
+        </blockquote><br/>
+        <p>
+          <a href="https://www.youtube.com/watch?v=ARQD4BN_5ns" target="_blank">
+            ElixirConf 2017 - Building an Artificial Pancreas with Elixir and Nerves - Tim Mecklem
+          </a>
+        </p>
       </section>
       <section>
         <h3>...and there is more</h3>
