add pinterest as company using elixir

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -478,10 +478,8 @@
               (Solutions for the cannabis sector)
             </li>
             <li>
-              <a href="https://gameanalytics.com/" target="_blank"
-                >GameAnalytics</a
-              >
-              (Analytics)
+              <a href="https://pinterest.com" target="_blank">Pinterest</a>
+              (Ads API, Spam Protectiom)
             </li>
             <li>
               <a href="https://www.wundermobility.com/" target="_blank"
@@ -501,6 +499,11 @@
             </li>
             <li>...</li>
           </ul>
+          <aside class="notes">
+            <p>
+              pinterest: server reduction Spam Protectiom 1400 -> 70
+            </p>
+          </aside>
         </section>
         <section>
           <h3>Next steps</h3>
