Be more exact about rails and reveal the gif

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -54,7 +54,7 @@
         <section>
           <p>
             Created by <b>José Valim</b> circa 2012,<br />
-            Former Rails Core Team Member
+            Former Ruby on Rails Core Team Member
           </p>
           <blockquote>
             He was trying to make Rails really thread safe, found Erlang and
@@ -173,7 +173,12 @@
               >Joe Armstrong, 2013</a
             >
           </p>
-          <img src="assets/damn.webp" height="35%" width="35%" />
+          <img
+            class="fragment fade-in"
+            src="assets/damn.webp"
+            height="35%"
+            width="35%"
+          />
         </section>
         <section>
           <h3>1998</h3>
